# XCurses

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
doc/: Doxyfile  footer.html  header.html  mainpage.h
example/: CMakeLists.txt
example/Forms/: CMakeLists.txt  Forms.cpp
example/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
extlibs/x86/: pdcurses.lib
include/PDCurses/: panel.h
include/XCurses/: Attribute.h  Behaviour.h  Border.h  Char.h  Color.h  ColorPalette.h  ColorSystem.h  Container.h  Context.h  ContextComponent.h  ContextSystem.h  Core.h  CoreConfig.h  Curses.h  CursesConfig.h  Drawable.h  HasWindow.h  Input.h  Object.h  Object.inl  Position.h  RootObject.h  Status.h  String.h  TreeNode.h  Vector.h  Vector.inl  Vector2.h  Vector2.inl  Vector3.h  Widget.h  Window.h  XBorder.h  XCurses.h  XCursesConfig.h  XWindow.h
include/XCurses/Graphics/: Behaviour.h  Border.h  Color.h  ColorPalette.h  ColorSystem.h  Container.h  Context.h  ContextComponent.h  ContextSystem.h  Drawable.h  Form.h  HasWindow.h  InputTextArea.h  Inputtable.h  Object.h  Object.inl  RootContainer.h  RootWindow.h  ScrollBar.h  TextArea.h  TextBox.h  Title.h  VirtualScreen.h  Widget.h  Window.h
include/XCurses/Graphics/Widgets/: Title.h  Window.h
include/XCurses/System/: Area.h  Context.h  ContextSystem.h  Core.h  CoreConfig.h  Curses.h  CursesConfig.h  CursorState.h  Direction.h  Input.h  Inputtable.h  Object.h  Object.inl  Status.h  Vector.h  Vector2.h  Vector2.inl  Vector3.h  Vector3.inl
include/XCurses/Text/: Attribute.h  Char.h  Key.h  String.h
lib/x64/: pdcurses.lib
src/XCurses/: Attribute.cpp  Border.cpp  CMakeLists.txt  Char.cpp  Color.cpp  ColorPalette.cpp  ColorSystem.cpp  Container.cpp  Context.cpp  ContextComponent.cpp  ContextSystem.cpp  Core.cpp  CoreConfig.cpp  Curses.cpp  CursesConfig.cpp  HasWindow.cpp  Input.cpp  Object.cpp  Position.cpp  Status.cpp  String.cpp  TreeNode.cpp  TreeNode.h  Widget.cpp  Window.cpp  XCurses.cpp  XWindow.cpp
src/XCurses/Graphics/: Behaviour.cpp  Border.cpp  Color.cpp  ColorPalette.cpp  ColorSystem.cpp  Container.cpp  Context.cpp  ContextComponent.cpp  ContextSystem.cpp  Drawable.cpp  Form.cpp  HasWindow.cpp  InputTextArea.cpp  Inputtable.cpp  Object.cpp  RootContainer.cpp  RootWindow.cpp  RootWindow.h  ScrollBar.cpp  TextArea.cpp  TextBox.cpp  Title.cpp  TreeNode.cpp  TreeNode.h  VirtualScreen.cpp  Widget.cpp  Window.cpp
src/XCurses/Graphics/Widgets/: Title.cpp  Window.cpp
src/XCurses/System/: Area.cpp  Behaviour.cpp  ColorSystem.cpp  Context.cpp  ContextSystem.cpp  Core.cpp  CoreConfig.cpp  Curses.cpp  CursesConfig.cpp  Drawable.cpp  Input.cpp  Inputtable.cpp  Object.cpp  Status.cpp  TreeNode.cpp  TreeNode.h
src/XCurses/Text/: Attribute.cpp  Char.cpp  Key.cpp  String.cpp
test/PDCurses/: CMakeLists.txt  FunctionLists.txt  main.cpp
test/XCurses/: CMakeLists.txt  TestColorSystem.cpp  TestContext.cpp  TestContextSystem.cpp  TestText.cpp  TestWidgets.cpp  TestWindow.cpp  TestWindows.cpp
test/XCurses/ManualTests/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
test/XCurses/UnitTests/: CMakeLists.txt
tests/PDCurses/: CMakeLists.txt  FunctionLists.txt  main.cpp
tests/XCurses/: CMakeLists.txt  TestColorSystem.cpp  TestColorSystem.h  main.cpp
